@@ -33,7 +33,8 @@ from AccessControl import Unauthorized
 from AccessControl.SecurityManagement import newSecurityManager
 
 from Products.ATContentTypes.lib import constraintypes
-from Products.CMFPlone.interfaces.ConstrainTypes import ISelectableConstrainTypes
+from Products.CMFPlone.interfaces.ConstrainTypes import ISelectableConstrainTypes as ZopeTwoISelectableConstrainTypes
+from Products.CMFPlone.interfaces import ISelectableConstrainTypes
 
 tests = []
 
@@ -56,7 +57,9 @@ class TestConstrainTypes(atcttestcase.ATCTSiteTestCase):
         self.failUnless(isinstance(self.af,
                                    constraintypes.ConstrainTypesMixin),
                         "ConstrainTypesMixin was not mixed in to ATFolder")
-        self.failUnless(ISelectableConstrainTypes.isImplementedBy(self.af),
+        self.failUnless(ZopeTwoISelectableConstrainTypes.isImplementedBy(self.af),
+                        "ISelectableConstrainTypes not implemented by ATFolder instance")
+        self.failUnless(ISelectableConstrainTypes.providedBy(self.af),
                         "ISelectableConstrainTypes not implemented by ATFolder instance")
 
     def test_enabled(self):
