@@ -1,3 +1,8 @@
+
+ * Made use Zope 3 interfaces for constrain types and browser default. Depends
+   on changes to CMFDynamicViewFTI trunk and Plone 2.5 branch.
+   [optildue]
+
  * Made HistoryAwareMixin a subclass of Archetypes ATHistoryAwareMixin, which
    is a working historyaware implementation for archetypes.
    [mj]
